# cookiecutter-erin

./: README.md  README.rst  cookiecutter.json
hooks/: post_gen_project.py
{{cookiecutter.project_slug}}/: .gitignore  setup.cfg  setup.py  {{cookiecutter.config_file}}
{{cookiecutter.project_slug}}/plugins/core/: __init__.py
{{cookiecutter.project_slug}}/plugins/core/error/: __init__.py  command_error_handler.py
{{cookiecutter.project_slug}}/plugins/core/navigation/: __init__.py  help.py
{{cookiecutter.project_slug}}/plugins/core/startup/: __init__.py  login.py
