[metadata]
name = {{cookiecutter.project_name}}
version = attr: {{cookiecutter.project_slug}}.__version__
platforms = any

[options]
packages = find:
python_requires = >=3.7
install_requires =
    erin

[options.extras_require]
docs =
    Sphinx
    sphinx_rtd_theme
tests =
    pytest
    pytest-cov
    pytest-runner

[options.packages.find]
include =
    {{cookiecutter.project_slug}}
    {{cookiecutter.project_slug}}.*

[aliases]
release = sdist bdist_wheel upload

[bdist_wheel]
universal = 0

[build_sphinx]
source_dir = docs
build_dir = docs/_build

[devpi:upload]
no-vcs = 1
formats = bdist_wheel
